Cleanup in preparation for adding actual effects to code injection tests

--- a/code-injection/package.json
+++ b/code-injection/package.json
@@ -6,6 +6,7 @@
     "eslint": "^8.10.0",
     "hot-formula-parser_3.0.0": "./hot-formula-parser_3.0.0/",
     "is-my-json-valid_2.20.0": "./is-my-json-valid_2.20.0/",
+    "jest-environment-node": "^29.7.0",
     "js-yaml_3.13.0": "./js-yaml_3.13.0/",
     "jsen_0.6.6": "./jsen_0.6.6/",
     "json-ptr_2.0.0": "./json-ptr_2.0.0/",
@@ -34,6 +35,7 @@
     "safer-eval_1.3.1": "./safer-eval_1.3.1/",
     "serialize-javascript_2.0.0": "./serialize-javascript_2.0.0/",
     "serialize-to-js_0.5.0": "./serialize-to-js_0.5.0/",
+    "sleep": "^6.3.0",
     "static-eval_1.1.1": "./static-eval_1.1.1/",
     "thenify_3.3.0": "./thenify_3.3.0/",
     "underscore_1.13.0-0": "./underscore_1.13.0-0/",
