--- a/code-injection/djv_2.0.0/package.json
+++ b/code-injection/djv_2.0.0/package.json
@@ -1,7 +1,8 @@
 {
   "id": "CVE-2020-28464",
   "dependencies": {
-    "djv": "2.0.0"
+    "djv": "2.0.0",
+    "sleep": "^6.3.0"
   },
   "links": {
     "source1": "https://github.com/advisories/GHSA-4hv7-3q38-97m8",
