--- a/command-injection/package.json
+++ b/command-injection/package.json
@@ -1,10 +1,12 @@
 {
   "name": "command-injection",
   "optionalDependencies": {
+    "aaptjs_1.3.1": "./aaptjs_1.3.1/",
     "adb-driver_0.1.8": "./adb-driver_0.1.8/",
     "alfred-workflow-nodejs_2.0.1": "./alfred-workflow-nodejs_2.0.1/",
     "apex-publish-static-files_2.0.0": "./apex-publish-static-files_2.0.0/",
     "apiconnect-cli-plugins_6.0.2": "./apiconnect-cli-plugins_6.0.2/",
+    "arpping_2.0.0": "./arpping_2.0.0/",
     "async-git_1.13.1": "./async-git_1.13.1/",
     "bestzip_2.1.6": "./bestzip_2.1.6/",
     "blamer_0.1.13": "./blamer_0.1.13/",
@@ -32,23 +34,29 @@
     "freespace_1.0.4": "./freespace_1.0.4/",
     "geojson2kml_0.1.1": "./geojson2kml_0.1.1/",
     "get-npm-package-version_1.0.6": "./get-npm-package-version_1.0.6/",
+    "git_0.1.5": "./git_0.1.5/",
     "git-add-remote_1.0.0": "./git-add-remote_1.0.0/",
     "git-dummy-commit_1.3.0": "./git-dummy-commit_1.3.0/",
+    "git-lib_1.6.0": "./git-lib_1.6.0/",
     "git-parse_1.0.4": "./git-parse_1.0.4/",
     "git-tags-remote_1.0.2": "./git-tags-remote_1.0.2/",
     "gitblame_0.1.1": "./gitblame_0.1.1/",
     "giting_0.0.7": "./giting_0.0.7/",
+    "gity_1.0.5": "./gity_1.0.5/",
     "gm_1.20.0": "./gm_1.20.0/",
     "google-cloudstorage-commands_0.0.1": "./google-cloudstorage-commands_0.0.1/",
+    "growl_1.9.0": "./growl_1.9.0",
     "gry_5.0.8": "./gry_5.0.8/",
     "heroku-env_0.2.0": "./heroku-env_0.2.0/",
     "hot-formula-parser_3.0.0": "./hot-formula-parser_3.0.0/",
     "im-metadata_3.0.1": "./im-metadata_3.0.1/",
     "im-resize_2.3.2": "./im-resize_2.3.2/",
+    "imagickal_5.0.1": "./imagickal_5.0.1/",
     "jison_0.4.17": "./jison_0.4.17/",
     "kill-by-port_0.0.1": "./kill-by-port_0.0.1/",
     "kill-port-process_0.0.1": "./kill-port-process_0.0.1/",
     "kill-process-by-name_1.0.5": "./kill-process-by-name_1.0.5/",
+    "killing_1.0.6": "./killing_1.0.6",
     "killport_1.0.1": "./killport_1.0.1/",
     "libnmap_0.4.11": "./libnmap_0.4.11/",
     "local-devices_2.0.0": "./local-devices_2.0.0/",
@@ -62,12 +70,14 @@
     "node-latex-pdf_0.0.2": "./node-latex-pdf_0.0.2/",
     "node-mpv_0.12.2": "./node-mpv_0.12.2/",
     "node-ps_0.0.2": "./node-ps_0.0.2/",
+    "node-unrar_0.1.0": "./node-unrar_0.1.0/",
     "npm-git-publish_0.2.4-beta": "./npm-git-publish_0.2.4-beta/",
     "npm-help_1.0.0": "./npm-help_1.0.0/",
     "npm-programmatic_0.0.12": "./npm-programmatic_0.0.12/",
     "onion-oled-js_0.0.2": "./onion-oled-js_0.0.2/",
     "open_0.0.5": "./open_0.0.5/",
     "pdf-image_1.0.5": "./pdf-image_1.0.5/",
+    "pdf-image_2.0.0": "./pdf-image_2.0.0/",
     "pdfinfojs_0.3.6": "./pdfinfojs_0.3.6/",
     "pidusage_1.0.0": "./pidusage_1.0.0/",
     "port-killer_1.0.1": "./port-killer_1.0.1/",
@@ -83,6 +93,7 @@
     "scp_0.0.3": "./scp_0.0.3/",
     "strider-git_1.0.3": "./strider-git_1.0.3/",
     "theme-core_0.2.5": "./theme-core_0.2.5/",
+    "thi.ng-egf_0.3.0": "./thi.ng-egf_0.3.0/",
     "total.js_3.4.6": "./total.js_3.4.6/",
     "ts-process-promises_1.0.2": "./ts-process-promises_1.0.2/",
     "umount_1.1.6": "./umount_1.1.6/",
@@ -91,20 +102,12 @@
     "whereis_0.4.0": "./whereis_0.4.0/",
     "wincred_1.0.2": "./wincred_1.0.2/",
     "xopen_1.0.0": "./xopen_1.0.0/",
-    "xps_1.0.2": "./xps_1.0.2/",
-    "thi.ng-egf_0.3.0": "./thi.ng-egf_0.3.0/",
-    "git-lib_1.6.0": "./git-lib_1.6.0/",
-    "pdf-image_2.0.0": "./pdf-image_2.0.0/",
-    "gity_1.0.5": "./gity_1.0.5/",
-    "git_0.1.5": "./git_0.1.5/",
-    "arpping_2.0.0": "./arpping_2.0.0/",
-    "node-unrar_0.1.0": "./node-unrar_0.1.0/",
-    "aaptjs_1.3.1": "./aaptjs_1.3.1/",
-    "imagickal_5.0.1": "./imagickal_5.0.1/",
-    "growl_1.9.0": "./growl_1.9.0",
-    "killing_1.0.6": "./killing_1.0.6"
+    "xps_1.0.2": "./xps_1.0.2/"
   },
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "jest-environment-node": "^29.7.0"
   }
 }
